--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://radioflyerx.github.io/blog/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Fate-Train'
 theme = 'anatole'
