--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,9 @@ baseURL = 'https://radioflyerx.github.io/blog/'
 languageCode = 'en-us'
 title = 'Fate-Train'
 theme = 'anatole'
+
+[params]
+title = "Fate-Train"
+author = "Daryl"
+description = "Story and planning for a Fate Accelerated TTRPG campaign"
+profilePicture = "images/profile.jpg"
